removed null validation